--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -29,16 +29,16 @@
 
 \subsection{HONE}
 
-\paragraph{} HONE\cite{HONE} is the first project that attempts to integrate end-hosts into network management on a level that is more sophisticated than simply viewing them as software switches. Our work shares the same goals as Sun et. al.’s work on HONE. The HONE platform is a traffic management system that provides network administrators with a platform to collect and aggregate network statistics from both hosts and switches on the network. This system was amongst the first SDN platform to incorporate metrics obtained directly from the end-host into network management. HONE runs an agent application on each host that gathers relevant end-host information and coordinates with other end-hosts to aggregate the information and return the result to a custom HONE controller. The system also provides uniform and programmable map-reduce interface for administrators to build applications that request and respond to the desired metrics. The HONE platform is specifically designed to collect and respond to host metrics, and significant effort has been put into distributed streaming, filtering and aggregation mechanisms. SmartBalancer studies whether it is feasible to build a load-balancing system that uses host-based metrics using more ‘general’ controller platforms like Pyretic\cite{Pyretic} and PyResonance\cite{PyResonance}.
+\paragraph{} HONE\cite{HONE} is the first project that attempts to integrate end-hosts into network management on a level that is more sophisticated than simply viewing them as software switches, and our work shares the same goals. The HONE platform is a traffic management system that provides network administrators with a platform to collect and aggregate network statistics from both hosts and switches on the network. This system was amongst the first SDN platforms to incorporate metrics obtained directly from the end-host into network management. HONE runs an agent application on each host that gathers relevant end-host information and coordinates with other end-hosts to aggregate the information and return the result to a custom HONE controller. The system also provides uniform and programmable map-reduce interface for administrators to build applications that request and respond to the desired metrics. The HONE platform is specifically designed to collect and respond to host metrics, and significant effort has been put into distributed streaming, filtering and aggregation mechanisms. SmartBalancer studies whether it is feasible to build a load-balancing system that uses host-based metrics using more ‘general’ controller platforms like Pyretic\cite{Pyretic} and PyResonance\cite{PyResonance}.
 
 \subsection{Pyretic}
 
-\paragraph{} Pyretic\cite{Pyretic} is a controller platform and domain-specific language that allows programmers to concisely specify a multitude of possible static and dynamic applications that run on top of the POX controller. The system allows easy implementation of parallel and sequential policies (using the || and >> operators), and results in code that is modular, easy to understand, and composable. The policies themselves are defined in the powerful NetCore policy language. Pyretic also provides an intuitive layer of abstraction over the network – providing a simplified model of the network that appears to break up complicated systems into simpler components and glue other components (switches) together. This is well-suited for SmartBalancer, as it allows us to easily express dynamic load balancing policies that change along with host load.
+\paragraph{} Pyretic\cite{Pyretic} is a controller platform and domain-specific language that allows programmers to concisely specify a multitude of possible static and dynamic applications that run on top of the POX controller. The system allows easy implementation of parallel and sequential policies (using the \textbar\textbar and \textgreater\textgreater operators), and results in code that is modular, easy to understand, and composable. The policies themselves are defined in the powerful NetCore policy language. Pyretic also provides an intuitive layer of abstraction over the network – providing a simplified model of the network that appears to break up complicated systems into simpler components and glue other components (switches) together. This is well-suited for SmartBalancer, as it allows us to easily express dynamic load balancing policies that change along with host load.
 
 
 \subsection{PyResonance}
 
-\paragraph{} PyResonance\cite{PyResonance} is a platform built on top of Pyretic that allows programmers to dynamically select different Pyretic programs to be run based on events that signify a change in network state. The system uses the concepts and framework introduced in Pyretic of modularizing and composing individual policy functions, and extends that to support modularizing and composing the policies themselves. While these events can be standard OpenFlow events, PyResonance also provides a generic JSON event driver that can be used to receive an arbitrary event from any entity in the network. While the PyResonance paper does not emphasize this, this event driver could be a key module that satisfies our goals of easily integrating end-hosts into existing platforms. Ultimately, we chose not to build SmartBalancer on top of PyResonance due to SmartBalancer as much of the boilerplate around finite-state machines was not required for this work.
+\paragraph{} PyResonance\cite{PyResonance} is a platform built on top of Pyretic that allows programmers to dynamically select different Pyretic programs to be run based on events that signify a change in network state. The system uses the concepts and framework introduced in Pyretic of modularizing and composing individual policy functions, and extends that to support modularizing and composing the policies themselves. The relevant part of this work is the handling of events from external sources. While these events can be standard OpenFlow events, PyResonance also provides a generic JSON event driver that can be used to receive an arbitrary event from any entity. While the PyResonance paper does not emphasize this, this event driver could be a key module that satisfies our goals of easily integrating end-hosts into existing platforms. Ultimately, we chose not to build SmartBalancer on top of PyResonance due to SmartBalancer as much of the boilerplate around finite-state machines was not required for this work.
 
 
 \section{Design}
@@ -48,9 +48,9 @@
 
 \paragraph{} The high level design of SmartBalancer can be split into two separate modules: a standalone end-host monitoring application, and a Pyretic-based controller application designed to interface with the metrics obtained from the monitoring application.  The flow of operations for SmartBalancer is as follows:
 \begin{enumerate}
-\item The pyretic controller application is started and begins accepting end-host connections.
+\item The Pyretic controller application is started and begins accepting end-host connections.
 \item The end-host monitoring application initially connects to the controller application, and begins monitoring key end-host metrics.
-\item When a significant event has occurred based on these metrics, such as CPU utilization passing a certain threshold, the end-host monitoring application sends a message to the controller application.
+\item When a significant event has occurred based on these metrics, (such as CPU utilization passing a certain threshold), the end-host monitoring application sends a message to the controller application.
 \item Once the controller has received a message from an end-host monitoring application, it modifies the network policy as needed.
 \end{enumerate}
 
@@ -63,7 +63,6 @@
 \paragraph{} Gatherer calculates CPU utilization through data obtain from the /proc/stat file, which contains the total elapsed time of all executing processes and idle time in jiffies (one tick of the system timer interrupt, typically 4ms-10ms). This file is polled at a user specified interval, and the elapsed process and idle time over this interval (calculated by the diff between the current poll and most poll) is used to calculate the cpu utilization over this period of time. Gatherer also uses the /proc file system in order to determine process liveness. The /proc file system contains folders (whose name is the process id) for each process currently running on the host machine. The status file in these folders contain the name of the process associated with the process id, so Gatherer parses this file for the given process name in order to determine whether or not a process is currently executing.
 
 \paragraph{} Additional application level insights are also feasible which do not involve code changes. For example, the utility may read Nginx/Apache log files to determine average response latency and alert the controller when certain thresholds are crossed.
-[Should we implement tracking multiple processes just to say that we did? Piazza says we can describe parts of the system we did not implement, so go ahead.]
 
 \subsection{Controller Application}
 
@@ -76,29 +75,29 @@
 \section{Evaluation}
 \label{sec:evaluation}
 
-\paragraph{} 
+\paragraph{}
 \begin{figure}[ht!]
      \begin{center}
         \subfloat{
-            \includegraphics[width=0.5\textwidth]{slide1.JPG}
+            \includegraphics[width=0.5\textwidth]{Slide1.JPG}
         }
         \subfloat{
-           \includegraphics[width=0.5\textwidth]{slide2.JPG}
+           \includegraphics[width=0.5\textwidth]{Slide2.JPG}
         }
-	\\
+    \\
         \subfloat{
             \label{fig:third}
-            \includegraphics[width=0.5\textwidth]{slide3.JPG}
+            \includegraphics[width=0.5\textwidth]{Slide3.JPG}
         }
         \subfloat{
             \label{fig:fourth}
-            \includegraphics[width=0.5\textwidth]{slide4.JPG}
+            \includegraphics[width=0.5\textwidth]{Slide4.JPG}
         }
     \end{center}
     \caption{Example scenario: SmartBalancer initially routes new flows to Host 1, but on receiving a host-overloaded message from Host 1, SmartBalancer routes new flows to Host 2.}
    \label{fig:subfigures}
 \end{figure}
-For our tests, we ran Super Pi (to stress the CPU) on a host machine with our monitoring tool running and repeatedly pinged our canonical IP from different virtual hosts. We then measured the time difference between when the CPU utilization of the host reached its target threshold to when SmartBalancer began routing new flows to a different host (response time).
+For our tests, we ran Super Pi (to stress the CPU) on a host machine with our monitoring tool running and repeatedly pinged our canonical IP from 20 virtual hosts. We then measured the time difference between when the CPU utilization of the host reached its target threshold to when SmartBalancer began routing new flows to a different host (response time).
 
 \begin{figure}[ht!]
 \centering
@@ -106,9 +105,9 @@ For our tests, we ran Super Pi (to stress the CPU) on a host machine with our mo
 \caption{SmartBalancer response time as a function of frequency of incoming host events. The response time (to increased CPU load) increases as the frequency of host events decreases. However, too high a frequency may lead to increased response times as well due to processing overhead.}
 \label{pic:responseTime}
 \end{figure}
-\paragraph{} To evaluate the effect of a large number of hosts generating frequent events, we analyzed response time versus event frequency. Figure 1 outlines our findings. We see that response time generally increases with event frequency (as the monitoring resolution is decreased to lower the event frequency). However, at the 10 events/sec mark, we see a large variance in response times due to increased processing overhead. Therefore, it is clear that there is a tradeoff between monitoring resolution and response times.
+\paragraph{} To evaluate the effect of a large number of hosts generating frequent events, we analyzed response time versus event frequency. Figure 2 outlines our findings. We see that response time generally increases with event frequency (as the monitoring resolution is decreased to lower the event frequency). However, at the 10 events/sec mark, we see a slight increase (and large variance) in response times due to increased processing overhead. Therefore, it is clear that there is a tradeoff between monitoring resolution and response times.
 
-\paragraph{} Additionally, there was no significant difference between ping response times immediately before and after the host status update. For our experiments, we used the single switch topology described above on a virtualized Mininet network.
+\paragraph{} Additionally, there was no significant difference between ping response times immediately before and after the host status update. For our experiments, we used the single switch topology described above on a virtualized Mininet network with 24 total hosts.
 
 \section{Future Work}
 \label{sec:future}
@@ -134,6 +133,7 @@ For our tests, we ran Super Pi (to stress the CPU) on a host machine with our mo
 \bibliographystyle{plain}
 
 \end{document}
+
 
 
 
